// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select renders correctly 1`] = `
<div
  className="fandom-select__wrapper"
>
  <div
    className="fandom-select css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className="fandom-select__control css-yk16xz-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="fandom-select__value-container css-1hwfws3"
      >
        <div
          className="fandom-select__placeholder css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="fandom-select__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="fandom-select-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="fandom-select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          className="fandom-select__indicator fandom-select__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="search-dropdown-indicator"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders correctly 2`] = `
<div
  className="fandom-select__wrapper"
>
  <div
    className="fandom-select css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className="fandom-select__control css-yk16xz-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="fandom-select__value-container fandom-select__value-container--has-value css-1hwfws3"
      >
        <div
          className="fandom-select__single-value css-1uccc91-singleValue"
        >
          label1
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="fandom-select__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="fandom-select-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="fandom-select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          className="fandom-select__indicator fandom-select__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="search-dropdown-indicator"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders correctly 3`] = `
<div
  className="fandom-select__wrapper"
>
  <div
    className="fandom-select css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className="fandom-select__control css-yk16xz-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="fandom-select__value-container fandom-select__value-container--is-multi fandom-select__value-container--has-value css-1hwfws3"
      >
        <div
          className="css-1rhbuit-multiValue fandom-select__multi-value"
        >
          <div
            className="css-12jo7m5 fandom-select__multi-value__label"
          >
            label1
          </div>
          <div
            className="css-xb97g8 fandom-select__multi-value__remove"
            onClick={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-6q0nyr-Svg"
              focusable="false"
              height={14}
              viewBox="0 0 20 20"
              width={14}
            >
              <path
                d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
              />
            </svg>
          </div>
        </div>
        <div
          className="css-1rhbuit-multiValue fandom-select__multi-value"
        >
          <div
            className="css-12jo7m5 fandom-select__multi-value__label"
          >
            label3
          </div>
          <div
            className="css-xb97g8 fandom-select__multi-value__remove"
            onClick={[Function]}
            onMouseDown={[Function]}
            onTouchEnd={[Function]}
          >
            <svg
              aria-hidden="true"
              className="css-6q0nyr-Svg"
              focusable="false"
              height={14}
              viewBox="0 0 20 20"
              width={14}
            >
              <path
                d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
              />
            </svg>
          </div>
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="fandom-select__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="fandom-select-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="fandom-select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          className="fandom-select__indicator fandom-select__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="search-dropdown-indicator"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders correctly 4`] = `
<div
  className="fandom-select__wrapper"
>
  <div
    className="fandom-select css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className="fandom-select__control css-yk16xz-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="fandom-select__value-container css-1hwfws3"
      >
        <div
          className="fandom-select__placeholder css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="fandom-select__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="fandom-select-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="fandom-select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          className="fandom-select__indicator fandom-select__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="search-dropdown-indicator"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders correctly 5`] = `
<div
  className="fandom-select__wrapper"
>
  <div
    className="fandom-select css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className="fandom-select__control css-yk16xz-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="fandom-select__value-container css-1hwfws3"
      >
        <div
          className="fandom-select__placeholder css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="fandom-select__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="fandom-select-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="fandom-select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          className="fandom-select__indicator fandom-select__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="search-dropdown-indicator"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders correctly 6`] = `
<div
  className="fandom-select__wrapper"
>
  <div
    className="fandom-select css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className="fandom-select__control css-yk16xz-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="fandom-select__value-container css-1hwfws3"
      >
        <div
          className="fandom-select__placeholder css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <input
          className="css-62g3xt-dummyInput"
          disabled={false}
          id="fandom-select-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          readOnly={true}
          tabIndex="0"
          value=""
        />
      </div>
      <div
        className="fandom-select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          className="fandom-select__indicator fandom-select__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="default-dropdown-indicator"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders correctly 7`] = `
<div
  className="fandom-select__wrapper"
>
  <div
    className="fandom-select fandom-select--is-disabled css-14jk2my-container"
    onKeyDown={[Function]}
  >
    <div
      className="fandom-select__control fandom-select__control--is-disabled css-1fhf3k1-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="fandom-select__value-container css-1hwfws3"
      >
        <div
          className="fandom-select__placeholder css-1wa3eu0-placeholder"
        >
          Select...
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="fandom-select__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={true}
              id="fandom-select-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="fandom-select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          className="fandom-spinner"
          style={
            Object {
              "height": 24,
              "width": 24,
            }
          }
        >
          <svg
            height={24}
            viewBox="0 0 24 24"
            width={24}
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              transform="translate(12, 12)"
            >
              <circle
                fill="none"
                r={11}
                strokeDasharray={69.11503837897544}
                strokeDashoffset={69.11503837897544}
                strokeLinecap="round"
                strokeWidth={2}
              />
            </g>
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Select renders correctly 8`] = `
<div
  className="css-hbt8bd-DropdownIndicator"
>
  <div
    className="default-dropdown-indicator is-focused"
  />
</div>
`;

exports[`Select renders with grouped options 1`] = `
<div
  className="fandom-select__wrapper"
>
  <div
    className="fandom-select css-2b097c-container"
    onKeyDown={[Function]}
  >
    <div
      className="fandom-select__control css-yk16xz-control"
      onMouseDown={[Function]}
      onTouchEnd={[Function]}
    >
      <div
        className="fandom-select__value-container fandom-select__value-container--has-value css-1hwfws3"
      >
        <div
          className="fandom-select__single-value css-1uccc91-singleValue"
        >
          label4
        </div>
        <div
          className="css-b8ldur-Input"
        >
          <div
            className="fandom-select__input"
            style={
              Object {
                "display": "inline-block",
              }
            }
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="none"
              autoComplete="off"
              autoCorrect="off"
              disabled={false}
              id="fandom-select-input"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              spellCheck="false"
              style={
                Object {
                  "background": 0,
                  "border": 0,
                  "boxSizing": "content-box",
                  "color": "inherit",
                  "fontSize": "inherit",
                  "label": "input",
                  "opacity": 1,
                  "outline": 0,
                  "padding": 0,
                  "width": "1px",
                }
              }
              tabIndex="0"
              type="text"
              value=""
            />
            <div
              style={
                Object {
                  "height": 0,
                  "left": 0,
                  "overflow": "scroll",
                  "position": "absolute",
                  "top": 0,
                  "visibility": "hidden",
                  "whiteSpace": "pre",
                }
              }
            >
              
            </div>
          </div>
        </div>
      </div>
      <div
        className="fandom-select__indicators css-1hb7zxy-IndicatorsContainer"
      >
        <div
          aria-hidden="true"
          className="fandom-select__indicator fandom-select__dropdown-indicator css-tlfecz-indicatorContainer"
          onMouseDown={[Function]}
          onTouchEnd={[Function]}
        >
          <div
            className="search-dropdown-indicator"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
